Fix alignment of layout 01

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  padding: 0;
+  margin: 0;
+}
+
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +23,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 5px 15px;
+  font-weight: bold;
 }
 
 input {
@@ -25,3 +34,57 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.header,
+.footer{
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
+}
+
+.right-links{
+  display: flex;
+  margin-left: auto;
+  gap: 15px;
+}
+
+
+.left-links{
+  display: flex;
+  gap: 15px;
+}
+
+li{
+  list-style: none;
+}
+
+a{
+  color: rgb(120, 117, 117);
+  text-decoration: none;
+  font-weight: bold;
+
+}
+
+/* .container{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+.content{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+  /* max-width: 600px; */
+  flex-direction: column;
+}
+
+.footer{
+  background-color: lightgray;
+  
+}
+
+
